# chat_server_rs

./: .gitignore  Cargo.toml  Dockerfile
chat_core/: Cargo.toml
chat_core/src/: lib.rs
src/: controller.rs  env_var.rs  main.rs  schema.rs
src/schema/: mod.rs
src/schema/query/: hello_world.rs
src/voyager/: index.html  mod.rs
