[package]
name = "chat_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
async-graphql = "2.9.10"
async-graphql-actix-web = "2.9.10"
tokio = "1.10.0"
tokio-stream = "0.1.7"
actix-cors = "0.5.4"
chat_core = { path = "chat_core" }

[workspace]
members = ["chat_core"]